KUBE/clusters/space/endurance/gateways/argocd-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  parentRefs:
    - name: k8s-gateway
      namespace: plt-gateway
      sectionName: http
    - name: k8s-gateway
      namespace: plt-gateway
      sectionName: https
  hostnames:
    - "argocd.k8s.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
